samples/_failures_safe/1761082307_c06661_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0ec81cb.c: In function ‘main’:
./samples/SAFE/__tmp_d0ec81cb.c:148:12: error: missing terminating " character
  148 |     printf("\nEnter level to filter by (DEBUG/INFO/WARNING/ERROR/
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d0ec81cb.c:148:5: error: expected expression at end of input
  148 |     printf("\nEnter level to filter by (DEBUG/INFO/WARNING/ERROR/
      |     ^~~~~~
./samples/SAFE/__tmp_d0ec81cb.c:148:5: error: expected declaration or statement at end of input
